# sereneplayer

./: .buildconfig  .gitignore  Makefile  README.md  config.h  config.status  configure.ac  libtool
po/: Makefile
src/: Makefile  Makefile.am  main.c  mplayerwrap.c  mplayerwrap.h  sereneplayer.c  sereneplayer.h  sereneplayer.ui
